--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
--e ./fairseq/
+fairseq
 opencv-python
 timm
 ftfy==6.0.3
 tensorboardX==2.4.1
-pycocotools==2.0.4
+# pycocotools==2.0.4  # Already installed via conda
 pycocoevalcap==1.2
 pytorch_lightning
 einops
